backend/error.txt
C:\Users\Ramaz\OneDrive\Desktop\Full-Stach for Teach site\backend\src\scripts\data\level1_course3_part2.js:108
3. **\`min\` / \`max\`**: ოდნავ განსხვავდება წინა ორისგან. \`length\` ნიშნავს სიგრძეს სტრიქონში, თუმცა \`min\` და \`max\` გამოიყენება რიცხვებისთვის (\`type="number"\`) და თარიღებისთვის. მაგ: \`min="1"` ნიშნავს რომ 0-ს ან უარყოფით ციფრს ვერ ჩაწერს.
                                                                                                                                                                                                          ^^^^^^^

SyntaxError: Unexpected identifier 'ნიშნავს'
    at wrapSafe (node:internal/modules/cjs/loader:1735:18)
    at Module._compile (node:internal/modules/cjs/loader:1778:20)
    at Object..js (node:internal/modules/cjs/loader:1936:10)
    at Module.load (node:internal/modules/cjs/loader:1525:32)
    at Module._load (node:internal/modules/cjs/loader:1327:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:245:24)
    at Module.require (node:internal/modules/cjs/loader:1548:12)
    at require (node:internal/modules/helpers:152:16)
    at Object.<anonymous> (C:\Users\Ramaz\OneDrive\Desktop\Full-Stach for Teach site\backend\src\scripts\seed_level1.js:9:14)

Node.js v24.13.1
